--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {background-color:black;}
 h1{color:grey;}
 
-.main{
+.maindiv{
     background-color: white;
     color: black;
     width: 300px;
