--- a/style.css
+++ b/style.css
@@ -1,10 +1,14 @@
-body {background-color:black;}
-h1{color:grey;}
+body {
+    background-color:black;
+}
+h1{
+    color:grey;
+}
 
 .maindiv{
     background-color: white;
     color: black;
-    width: 300px;
+    width: 400px;
     padding: 20px;
     border-radius: 25px;
     margin: auto;
